<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    tools:context="com.example.kenny.trogguide.Home">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvhomeWelcome"
        android:layout_margin="10dp"
        android:textSize="18sp"/>



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnHomeDriInfo"
        android:id="@+id/btnHomeDriInfo"
        style="@style/Button"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnHomeCommInfo"
        android:id="@+id/btnHomeCommInfo"
        style="@style/Button"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnHomeGenInfo"
        android:id="@+id/btnHomeGenInfo"
        style="@style/Button"/>
</LinearLayout>
