<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.kenny.trogguide.CommuterInfo">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCommFindLoc"
        android:id="@+id/btnCommFindLoc"
        style="@style/Button"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCommFindBus"
        android:id="@+id/btnCommFindBus"
        style="@style/Button"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCommRequestBus"
        android:id="@+id/btnCommRequestBus"
        style="@style/Button"/>
</LinearLayout>
